--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,5 +17,8 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint"]
+  "plugins": ["react", "@typescript-eslint"],
+  "rules": {
+    "@typescript-eslint/explicit-module-boundary-types": ["off"]
+  }
 }
