--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "@types/react": "^17.0",
     "@types/react-dom": "^17.0",
     "@types/react-router-dom": "^5.1",
+    "@types/styled-components": "^5.1.23",
     "@types/webpack-env": "^1.16",
     "axios": "^0.26",
     "eslint-plugin-prettier": "^3.4.0",
     "http-proxy-middleware": "^2.0.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "typescript": "^4.2.4"
   },
   "scripts": {
