Initial MapBox implementation

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/mapbox-gl": "^2.6.1",
     "@types/react": "^17.0",
     "@types/react-dom": "^17.0",
     "@types/react-router-dom": "^5.1",
@@ -11,6 +12,7 @@
     "axios": "^0.26",
     "eslint-plugin-prettier": "^3.4.0",
     "http-proxy-middleware": "^2.0.0",
+    "mapbox-gl": "^2.7.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
